--- a/privacy.html
+++ b/privacy.html
@@ -22,37 +22,84 @@
     </div>
 
     <div class="content">
-      <h2>Privacy Policy (Placeholder)</h2>
+      <h2>Privacy Policy</h2>
       <p><strong>Effective date:</strong> <span id="effective"></span></p>
 
       <p>
-        This is placeholder text. Replace it with your final privacy policy before public release.
-        The sections below are a simple template suitable for a small app website.
+        Papis Canvas Puzzles (“the App”) respects your privacy. This Privacy Policy
+        explains what data is (and is not) collected when you use the App.
       </p>
 
-      <h3>What data we collect</h3>
+      <h3>Information We Collect</h3>
+
+      <p>
+        <strong>User-Selected Photos:</strong><br />
+        The App allows you to select photos from your device in order to create
+        personal jigsaw puzzles. Photo selection is entirely optional and initiated
+        by you.
+      </p>
+
       <ul>
-        <li>App usage data: <em>Placeholder</em></li>
-        <li>Crash diagnostics: <em>Placeholder</em></li>
-        <li>Account data: <em>Not used (placeholder)</em></li>
+        <li>Selected photos are stored locally on your device.</li>
+        <li>Photos are <strong>not uploaded</strong> to any server.</li>
+        <li>Photos are <strong>not shared</strong> with third parties.</li>
+        <li>Photos are <strong>not linked</strong> to your identity.</li>
       </ul>
 
-      <h3>How we use data</h3>
+      <p>
+        You can delete your photos at any time from within the App.
+      </p>
+
+      <h3>Information We Do Not Collect</h3>
       <ul>
-        <li>Provide and improve app functionality</li>
-        <li>Fix bugs and improve stability</li>
+        <li>No account information</li>
+        <li>No names, email addresses, or identifiers</li>
+        <li>No location data</li>
+        <li>No contacts or address book data</li>
+        <li>No advertising identifiers</li>
+        <li>No analytics or tracking data</li>
       </ul>
 
-      <h3>Sharing</h3>
-      <p>We do not sell your personal data. Any sharing is described here: <em>Placeholder</em>.</p>
+      <h3>Subscriptions & Payments</h3>
+      <p>
+        The App offers optional subscriptions processed by Apple through the
+        App Store. We do not receive or store your payment information.
+        All transactions are handled directly by Apple.
+      </p>
 
-      <h3>Children</h3>
-      <p>This app is not directed to children under 13. <em>Placeholder</em>.</p>
+      <h3>Data Sharing</h3>
+      <p>
+        We do not sell, rent, or share your personal data.
+        User-selected photos remain on your device unless you choose to remove them.
+      </p>
+
+      <h3>Children’s Privacy</h3>
+      <p>
+        The App does not knowingly collect personal data from children.
+        If you believe that personal information has been provided in error,
+        please contact us and we will take appropriate action.
+      </p>
+
+      <h3>Your Control</h3>
+      <p>
+        You control all data stored by the App:
+      </p>
+      <ul>
+        <li>You decide which photos to select</li>
+        <li>You may delete photos at any time</li>
+        <li>You may remove the App to delete all stored data</li>
+      </ul>
+
+      <h3>Changes to This Policy</h3>
+      <p>
+        This Privacy Policy may be updated to reflect changes to the App.
+        Any updates will be published on this page.
+      </p>
 
       <h3>Contact</h3>
       <p>
-        If you have questions, contact
-        <a href="mailto:papi@papiscanvas.com">papi@papiscanvas.com</a>.
+        If you have questions about this Privacy Policy, contact:
+        <a href="mailto:papi@papiscanvas.com">papi@papiscanvas.com</a>
       </p>
 
       <p style="margin-top:18px;">
