--- a/terms.html
+++ b/terms.html
@@ -22,31 +22,90 @@
     </div>
 
     <div class="content">
-      <h2>Terms of Use (Placeholder)</h2>
+      <h2>Terms of Use</h2>
       <p><strong>Effective date:</strong> <span id="effective"></span></p>
 
       <p>
-        This is placeholder text. Replace it with your final terms before public release.
+        These Terms of Use govern your use of the Papis Canvas Puzzles mobile application
+        (“the App”). By using the App, you agree to these Terms.
       </p>
 
-      <h3>License</h3>
-      <p>You are granted a personal, non-exclusive license to use the app.</p>
+      <h3>Ownership of User Content</h3>
+      <p>
+        You retain <strong>full ownership and all rights</strong> to any photographs or images
+        that you choose to use within the App.
+      </p>
+      <p>
+        Your photographs remain your personal property at all times.
+        Papis Canvas Puzzles does <strong>not</strong> claim any ownership,
+        license, or rights to your photos.
+      </p>
 
-      <h3>Acceptable use</h3>
+      <h3>Use of User Photos</h3>
+      <p>
+        Photos selected by you are used <strong>solely</strong> for the purpose of creating
+        and playing jigsaw puzzles <strong>within the App</strong>.
+      </p>
       <ul>
-        <li>Do not misuse the service or attempt to disrupt the app.</li>
-        <li>Do not reverse engineer the app except where permitted by law.</li>
+        <li>Photos are processed and stored locally on your device.</li>
+        <li>Photos are <strong>not uploaded</strong> to any server.</li>
+        <li>Photos are <strong>not shared</strong> with the app developer or third parties.</li>
+        <li>The developer has <strong>no access, visibility, or awareness</strong> of your photos.</li>
       </ul>
 
-      <h3>Content</h3>
-      <p>All content is provided “as is”. <em>Placeholder</em>.</p>
+      <p>
+        You may delete your photos at any time from within the App.
+      </p>
 
-      <h3>Changes</h3>
-      <p>We may update these terms from time to time.</p>
+      <h3>Developer Content and Intellectual Property</h3>
+      <p>
+        All app code, design, user interface elements, graphics, text, and
+        non-user-provided puzzle content are the intellectual property of
+        Papis Canvas Puzzles and are protected by applicable laws.
+      </p>
+
+      <p>
+        You are granted a personal, non-exclusive, non-transferable license
+        to use the App for its intended purpose.
+      </p>
+
+      <h3>Acceptable Use</h3>
+      <ul>
+        <li>You agree not to misuse or attempt to disrupt the App.</li>
+        <li>You agree not to reverse engineer the App except where permitted by law.</li>
+        <li>You agree not to use the App for unlawful purposes.</li>
+      </ul>
+
+      <h3>Subscriptions</h3>
+      <p>
+        The App may offer optional subscriptions processed through the Apple App Store.
+        Payments and subscription management are handled entirely by Apple.
+        We do not receive or store your payment information.
+      </p>
+
+      <h3>Disclaimer</h3>
+      <p>
+        The App is provided “as is” and “as available”.
+        To the fullest extent permitted by law, we disclaim all warranties,
+        express or implied.
+      </p>
+
+      <h3>Limitation of Liability</h3>
+      <p>
+        To the maximum extent permitted by law, Papis Canvas Puzzles shall not be liable
+        for any indirect, incidental, or consequential damages arising from your use of the App.
+      </p>
+
+      <h3>Changes to These Terms</h3>
+      <p>
+        These Terms may be updated from time to time.
+        Continued use of the App constitutes acceptance of the updated Terms.
+      </p>
 
       <h3>Contact</h3>
       <p>
-        Questions: <a href="mailto:papi@papiscanvas.com">papi@papiscanvas.com</a>
+        If you have questions about these Terms, contact:
+        <a href="mailto:papi@papiscanvas.com">papi@papiscanvas.com</a>
       </p>
 
       <p style="margin-top:18px;">
