--- a/help.html
+++ b/help.html
@@ -12,7 +12,7 @@
     <div class="header">
       <div class="brand">
         <h1>Papis Canvas Puzzles</h1>
-        <p>Help</p>
+        <p>Help & Support</p>
       </div>
       <div class="nav">
         <a href="index.html">Home</a>
@@ -22,19 +22,70 @@
     </div>
 
     <div class="content">
-      <h2>Help (Placeholder)</h2>
-      <p>This page is a placeholder. Replace with FAQs and support details.</p>
+      <h2>Help</h2>
 
-      <h3>Common questions</h3>
+      <p>
+        This page answers common questions about using Papis Canvas Puzzles.
+        If you need further assistance, you can contact us at the bottom of the page.
+      </p>
+
+      <h3>Getting Started</h3>
       <ul>
-        <li><strong>How do I change theme?</strong> Use the Theme button in Settings.</li>
-        <li><strong>How do I restore a puzzle?</strong> Open “In Progress” and tap a saved puzzle.</li>
-        <li><strong>How do I report a bug?</strong> Email support with details and screenshots.</li>
+        <li>Select a puzzle from the Home screen.</li>
+        <li>Choose the number of pieces.</li>
+        <li>Drag pieces from the tray to the board to complete the puzzle.</li>
       </ul>
 
-      <h3>Contact support</h3>
+      <h3>Using My Pictures</h3>
       <p>
-        Email: <a href="mailto:papi@papiscanvas.com">papi@papiscanvas.com</a>
+        The <strong>My Pictures</strong> section lets you create puzzles from your own photos.
+      </p>
+      <ul>
+        <li>Tap <strong>Select Images</strong> to choose photos from your device.</li>
+        <li>Selected photos are stored locally on your device.</li>
+        <li>You can delete a photo at any time by long-pressing it and choosing <strong>Delete</strong>.</li>
+      </ul>
+
+      <h3>Subscriptions</h3>
+      <p>
+        A subscription unlocks access to premium features, including using your own pictures.
+      </p>
+      <ul>
+        <li>Subscriptions are managed by Apple through the App Store.</li>
+        <li>If you cancel a purchase, the app will continue to work normally.</li>
+        <li>If you have an active subscription and access is locked, try <strong>Restore Purchases</strong> in Settings.</li>
+      </ul>
+
+      <h3>Privacy</h3>
+      <p>
+        Your privacy is important:
+      </p>
+      <ul>
+        <li>You choose which photos to use.</li>
+        <li>Photos remain on your device.</li>
+        <li>We do not upload, collect, or view your photos.</li>
+      </ul>
+
+      <h3>Common Questions</h3>
+      <ul>
+        <li>
+          <strong>Why can’t I access My Pictures?</strong><br />
+          My Pictures is a premium feature and requires an active subscription.
+        </li>
+        <li>
+          <strong>How do I change the app theme?</strong><br />
+          Open the Admin tab and tap the Theme button.
+        </li>
+        <li>
+          <strong>Where are my saved puzzles?</strong><br />
+          Open the <strong>In Progress</strong> tab to continue saved puzzles.
+        </li>
+      </ul>
+
+      <h3>Contact Support</h3>
+      <p>
+        If you need help or want to report a problem, contact:
+        <a href="mailto:papi@papiscanvas.com">papi@papiscanvas.com</a>
       </p>
 
       <p style="margin-top:18px;">
