--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Papis Canvas Puzzles</title>
-  <meta name="description" content="Papis Canvas Puzzles — jigsaw puzzles for iOS and Android." />
+  <meta name="description" content="Papis Canvas Puzzles — relaxing jigsaw puzzles for iOS. Android version in development." />
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
@@ -12,46 +12,69 @@
     <div class="header">
       <div class="brand">
         <h1>Papis Canvas Puzzles</h1>
-        <p>Jigsaw puzzles for iOS and Android</p>
+        <p>Relaxing jigsaw puzzles for iOS</p>
       </div>
       <div class="nav">
-        <a href="privacy.html">Privacy Policy</a>
-        <a href="terms.html">Terms of Use</a>
+        <a href="privacy.html">Privacy</a>
+        <a href="terms.html">Terms</a>
         <a href="help.html">Help</a>
       </div>
     </div>
 
     <div class="hero">
       <h2>Relax. Play. Create.</h2>
-      <p>Download the app (links are placeholders for now).</p>
+      <p>
+        Enjoy beautifully designed jigsaw puzzles and create your own puzzles
+        from personal photos — all directly on your device.
+      </p>
+
       <div class="actions">
-        <!-- Replace # with your real App Store link -->
-        <a class="button primary" href="#" rel="noopener">Download on iOS</a>
-        <!-- Replace # with your real Google Play link -->
-        <a class="button secondary" href="#" rel="noopener">Download on Android</a>
+        <!-- Replace with App Store link when available -->
+        <a class="button primary" href="#" rel="noopener">
+          Download for iOS
+        </a>
+
+        <span style="display:block;margin-top:10px;color:var(--muted);font-size:14px;">
+          Android version currently in development
+        </span>
       </div>
     </div>
 
     <div class="grid">
       <div class="card half">
-        <h3>Privacy</h3>
-        <p>Read how the app handles your data.</p>
-        <p><a href="privacy.html">Open Privacy Policy</a></p>
+        <h3>Your Photos, Your Control</h3>
+        <p>
+          Create puzzles from your own pictures.
+          Photos stay on your device and are never uploaded.
+        </p>
+        <p><a href="privacy.html">Learn about privacy</a></p>
       </div>
+
       <div class="card half">
-        <h3>Terms</h3>
-        <p>Rules and conditions for using the app.</p>
-        <p><a href="terms.html">Open Terms of Use</a></p>
+        <h3>Fair & Clear Terms</h3>
+        <p>
+          You keep full ownership of your photos.
+          The app is designed for personal, private use.
+        </p>
+        <p><a href="terms.html">Read Terms of Use</a></p>
       </div>
+
       <div class="card half">
-        <h3>Help</h3>
-        <p>Frequently asked questions and support contact.</p>
+        <h3>Need Help?</h3>
+        <p>
+          Find answers to common questions, subscription help,
+          and tips for using the app.
+        </p>
         <p><a href="help.html">Open Help</a></p>
       </div>
+
       <div class="card half">
         <h3>Contact</h3>
-        <p>Email support: <a href="mailto:papi@papiscanvas.com">papi@papiscanvas.com</a></p>
-        <p style="margin-top:8px;color:var(--muted);font-size:13px;">(Placeholder; update anytime.)</p>
+        <p>
+          Questions or feedback?<br />
+          Email:
+          <a href="mailto:papi@papiscanvas.com">papi@papiscanvas.com</a>
+        </p>
       </div>
     </div>
 
