--- a/privacy.html
+++ b/privacy.html
@@ -59,11 +59,11 @@
         <li>No analytics or tracking data</li>
       </ul>
 
-      <h3>Subscriptions & Payments</h3>
+      <h3>This App is free</h3>
       <p>
-        The App offers optional subscriptions processed by Apple through the
-        App Store. We do not receive or store your payment information.
-        All transactions are handled directly by Apple.
+        There are no subscriptions, in-app purchases,
+  or payments of any kind. All features, including creating puzzles from your
+  own photos, are available at no cost.
       </p>
 
       <h3>Data Sharing</h3>
