--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Papis Canvas Puzzles</title>
   <meta name="description" content="Papis Canvas Puzzles — relaxing jigsaw puzzles for iOS. Android version in development." />
   <link rel="stylesheet" href="assets/styles.css" />
+   <meta name="apple-itunes-app" content="app-id=6758528732">
 </head>
 <body>
   <div class="container">
@@ -28,11 +29,13 @@
       </p>
 
       <div class="actions">
-        <!-- Replace with App Store link when available -->
-        <a class="button primary" href="#" rel="noopener">
-          Download for iOS
-        </a>
-
+        <a class="button primary"
+   href="https://apps.apple.com/gb/app/papis-canvas-puzzles/id6758528732"
+   target="_blank"
+   rel="noopener noreferrer nofollow"
+   aria-label="Download Papis Canvas Puzzles on the App Store">
+  Download for iOS
+</a>
         <span style="display:block;margin-top:10px;color:var(--muted);font-size:14px;">
           Android version currently in development
         </span>
