--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="card half">
         <h3>Need Help?</h3>
         <p>
-          Find answers to common questions, subscription help,
+          Find answers to common questions,
           and tips for using the app.
         </p>
         <p><a href="help.html">Open Help</a></p>
